# codecrafters-interpreter-python

./: Pipfile  README.md  pyproject.toml  your_program.sh
.codecrafters/: run.sh
app/: ast.py  bnf_lib.py  bnf_scanner.py  classes.py  config.py  environment.py  expression.py  func.py  interpreter.py  main.py  parser.py  productions.bnf  resolver.py  runtime.py  scanner.py  statement.py
test/: runner.py  test_bnf_lib.py  test_craft.py  test_e2e.py  test_environment.py  test_interpreter.py  test_parser.py  test_resolver.py  test_runner.py  test_scanner.py
