[project]
name = "darthwalsh-codecrafters-interpreter"
version = '0.1.alpha'
requires-python = ">= 3.12"

[tool.coverage.report]
exclude_also = ["@abstractmethod"]

[tool.pyright]
# Use strict mode, but disable rules about Unknown types coming from functions with no type hints
typeCheckingMode = "strict"
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 110

[tool.ruff.lint]
extend-select = [
    # see codes in https://docs.astral.sh/ruff/rules/
    "I",      # Validate isort rules
    "ISC001", # single-line-implicit-string-concatenation
    "RUF010", # explicit-f-string-type-conversion
    "RUF013", # implicit-optional
    "UP",     # pyupgrade automatically upgrade syntax for newer python versions
]
ignore = [
    # "E701",   # multiple-statements-on-one-line-colon   # MAYBE stops vscode from fighting case statements on same line
]
